syntax = "proto3";

package service;
option go_package = "/auth";

import "google/api/annotations.proto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }


message RegisterRequest {
  string username = 1;
  string password = 2;
  string confirmPassword = 3;
}

message RegisterResponse { string access_token = 1; }

message CheckProtectRequest {}

message CheckProtectResponse {
  string message = 1;
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string message = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }
  rpc CheckProtect(CheckProtectRequest) returns (CheckProtectResponse) {
    option (google.api.http) = {
      get: "/check"
    };
  }
  rpc Healthcheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/health"
    };
  }
}
